# rds-cli

./: README.md  pyproject.toml
src/rds_cli/: client.py  config.py  main.py  utils.py
tests/: test_utils.py
