[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rds-cli"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.68",
    "pydantic-settings>=2.13.1",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
rds-cli = "rds_cli.main:app"

[dependency-groups]
dev = [
    "boto3-stubs[essential]>=1.42.68",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
